--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
          <div class="formleft">
              I will be celebrated when I succeed
-              and I will tell the world the story of my success.
+              and I will soon tell the world the story of my succes.
 
 
         </div>
